[tool.poetry]
name = "repl_python3_ProxyBuddy"
version = "0.1.0"
description = ""
authors = ["ashishpatwal <<>>"]

[tool.poetry.dependencies]
python = "^3.8"
bs4 = "^0.0.1"
twilio = "^6.63.2"
Flask = "^2.0.1"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
